Constraintprog/minizinc-1.6/tests/parsing/flatzinc/f-items.fzn_yacc.err_exp
f-items.fzn:25: syntax error before 'solve'
